[package]
name = "tetris"
version = "0.1.0"
authors = ["Aloizio Macedo"]
keywords = ["gamedev", "tetris"]
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.20"
egui = "0.20"
rand = "0.8.5"
