[package]
name = "tetris_gui"
version = "0.1.0"
description = "Rust implementation of Tetris using egui."
repository = "https://github.com/AloizioMacedo/tetris"
authors = ["Aloizio Macedo"]
keywords = ["gamedev", "tetris", "egui"]
license = "MIT"
edition = "2021"
readme = "README.md"
categories = ["game-development", "games"]
exclude = ["target", "Cargo.lock"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.20"
egui = "0.20"
rand = "0.8.5"
